JiahuScriptRuntime/JiahuScript/ParseTree/JiahuScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\..\JiahuScript\Grammar\JiahuScript.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class JiahuScriptParser : Parser {
	public const int
		NUMBERS=1, NONE_NUMBER_VALUES=2, TYPE=3, ARRAY=4, DOUBLE=5, NULL=6, BOOL=7, 
		STRING=8, INT=9, DECIMAL=10, DATE=11, DATETIME=12, OBJECT=13, FUNCTION=14, 
		VOID=15, PRINT=16, IF=17, ELSE=18, WHILE=19, SWITCH=20, CASE=21, DEFAULT=22, 
		RETURN=23, FOREACH=24, BREAK=25, IN=26, FALSE=27, TRUE=28, OPEN_BRACE=29, 
		CLOSE_BRACE=30, OPEN_BRACKET=31, CLOSE_BRACKET=32, OPEN_PARENS=33, CLOSE_PARENS=34, 
		COMMA=35, COLON=36, QUESTION=37, PLUS=38, MINUS=39, TIMES=40, DIV=41, 
		PLUSPLUS=42, MINUSMINUS=43, NOT=44, NOT_EQUAL=45, LESS_OR_EQUAL=46, GREATER_OR_EQUAL=47, 
		GREATER_THAN=48, LESS_THAN=49, EQUAL=50, ASSIGN=51, DOT=52, AMPERSAND=53, 
		AND=54, OR=55, LINE_COMMENT=56, COMMENT=57, WS=58, FUNCID=59, ID=60;
	public const int
		RULE_script = 0, RULE_funcDec = 1, RULE_funcParams = 2, RULE_funcParam = 3, 
		RULE_stat = 4, RULE_print = 5, RULE_break = 6, RULE_switchStat = 7, RULE_caseBlock = 8, 
		RULE_defaultBlock = 9, RULE_whileStat = 10, RULE_ifStat = 11, RULE_foreachStat = 12, 
		RULE_returnStat = 13, RULE_block = 14, RULE_variableDec = 15, RULE_variableDecAssign = 16, 
		RULE_assignment = 17, RULE_arrayInitaliser = 18, RULE_objectCall = 19, 
		RULE_objectCallList = 20, RULE_functionCall = 21, RULE_functionList = 22, 
		RULE_expr = 23, RULE_arrayIndexer = 24, RULE_arrayAccessor = 25, RULE_definedType = 26, 
		RULE_value = 27, RULE_identifier = 28, RULE_number = 29, RULE_sign = 30, 
		RULE_noneNumber = 31;
	public static readonly string[] ruleNames = {
		"script", "funcDec", "funcParams", "funcParam", "stat", "print", "break", 
		"switchStat", "caseBlock", "defaultBlock", "whileStat", "ifStat", "foreachStat", 
		"returnStat", "block", "variableDec", "variableDecAssign", "assignment", 
		"arrayInitaliser", "objectCall", "objectCallList", "functionCall", "functionList", 
		"expr", "arrayIndexer", "arrayAccessor", "definedType", "value", "identifier", 
		"number", "sign", "noneNumber"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'double'", "'null'", "'bool'", "'string'", 
		"'int'", "'decimal'", "'date'", "'datetime'", "'object'", "'function'", 
		"'void'", "'print'", "'if'", "'else'", "'while'", "'switch'", "'case'", 
		"'default'", "'return'", "'foreach'", "'break'", "'in'", null, null, "'{'", 
		"'}'", "'['", "']'", "'('", "')'", "','", "':'", "'?'", "'+'", "'-'", 
		"'*'", "'/'", "'++'", "'--'", "'!'", "'!='", "'<='", "'>='", "'>'", "'<'", 
		"'=='", "'='", "'.'", "'&'", "'&&'", "'||'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NUMBERS", "NONE_NUMBER_VALUES", "TYPE", "ARRAY", "DOUBLE", "NULL", 
		"BOOL", "STRING", "INT", "DECIMAL", "DATE", "DATETIME", "OBJECT", "FUNCTION", 
		"VOID", "PRINT", "IF", "ELSE", "WHILE", "SWITCH", "CASE", "DEFAULT", "RETURN", 
		"FOREACH", "BREAK", "IN", "FALSE", "TRUE", "OPEN_BRACE", "CLOSE_BRACE", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENS", "CLOSE_PARENS", "COMMA", 
		"COLON", "QUESTION", "PLUS", "MINUS", "TIMES", "DIV", "PLUSPLUS", "MINUSMINUS", 
		"NOT", "NOT_EQUAL", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", "GREATER_THAN", 
		"LESS_THAN", "EQUAL", "ASSIGN", "DOT", "AMPERSAND", "AND", "OR", "LINE_COMMENT", 
		"COMMENT", "WS", "FUNCID", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "JiahuScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public JiahuScriptParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ScriptContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public FuncDecContext[] funcDec() {
			return GetRuleContexts<FuncDecContext>();
		}
		public FuncDecContext funcDec(int i) {
			return GetRuleContext<FuncDecContext>(i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				State = 66;
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 64; stat();
					}
					break;
				case 2:
					{
					State = 65; funcDec();
					}
					break;
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBERS) | (1L << NONE_NUMBER_VALUES) | (1L << TYPE) | (1L << ARRAY) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << SWITCH) | (1L << RETURN) | (1L << FOREACH) | (1L << BREAK) | (1L << OPEN_BRACE) | (1L << OPEN_PARENS) | (1L << MINUS) | (1L << NOT) | (1L << FUNCID) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDecContext : ParserRuleContext {
		public DefinedTypeContext definedType() {
			return GetRuleContext<DefinedTypeContext>(0);
		}
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode OPEN_PARENS() { return GetToken(JiahuScriptParser.OPEN_PARENS, 0); }
		public ITerminalNode CLOSE_PARENS() { return GetToken(JiahuScriptParser.CLOSE_PARENS, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FuncParamsContext[] funcParams() {
			return GetRuleContexts<FuncParamsContext>();
		}
		public FuncParamsContext funcParams(int i) {
			return GetRuleContext<FuncParamsContext>(i);
		}
		public FuncDecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDec; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDecContext funcDec() {
		FuncDecContext _localctx = new FuncDecContext(Context, State);
		EnterRule(_localctx, 2, RULE_funcDec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; definedType();
			State = 71; identifier();
			State = 72; Match(OPEN_PARENS);
			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==TYPE || _la==ARRAY) {
				{
				{
				State = 73; funcParams();
				}
				}
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 79; Match(CLOSE_PARENS);
			State = 80; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncParamsContext : ParserRuleContext {
		public FuncParamContext[] funcParam() {
			return GetRuleContexts<FuncParamContext>();
		}
		public FuncParamContext funcParam(int i) {
			return GetRuleContext<FuncParamContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(JiahuScriptParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(JiahuScriptParser.COMMA, i);
		}
		public FuncParamsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcParams; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncParams(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncParamsContext funcParams() {
		FuncParamsContext _localctx = new FuncParamsContext(Context, State);
		EnterRule(_localctx, 4, RULE_funcParams);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; funcParam();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==COMMA) {
				{
				{
				State = 83; Match(COMMA);
				State = 84; funcParam();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncParamContext : ParserRuleContext {
		public DefinedTypeContext definedType() {
			return GetRuleContext<DefinedTypeContext>(0);
		}
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public FuncParamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcParam; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncParam(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncParamContext funcParam() {
		FuncParamContext _localctx = new FuncParamContext(Context, State);
		EnterRule(_localctx, 6, RULE_funcParam);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; definedType();
			State = 91; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		public BreakContext @break() {
			return GetRuleContext<BreakContext>(0);
		}
		public SwitchStatContext switchStat() {
			return GetRuleContext<SwitchStatContext>(0);
		}
		public WhileStatContext whileStat() {
			return GetRuleContext<WhileStatContext>(0);
		}
		public IfStatContext ifStat() {
			return GetRuleContext<IfStatContext>(0);
		}
		public ForeachStatContext foreachStat() {
			return GetRuleContext<ForeachStatContext>(0);
		}
		public ReturnStatContext returnStat() {
			return GetRuleContext<ReturnStatContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public VariableDecAssignContext variableDecAssign() {
			return GetRuleContext<VariableDecAssignContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 8, RULE_stat);
		try {
			State = 104;
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93; block();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94; print();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 95; @break();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 96; switchStat();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 97; whileStat();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 98; ifStat();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 99; foreachStat();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 100; returnStat();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 101; assignment();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 102; variableDecAssign();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 103; expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		public ITerminalNode PRINT() { return GetToken(JiahuScriptParser.PRINT, 0); }
		public ITerminalNode OPEN_PARENS() { return GetToken(JiahuScriptParser.OPEN_PARENS, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode CLOSE_PARENS() { return GetToken(JiahuScriptParser.CLOSE_PARENS, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 10, RULE_print);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(PRINT);
			State = 107; Match(OPEN_PARENS);
			State = 108; expr(0);
			State = 109; Match(CLOSE_PARENS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BreakContext : ParserRuleContext {
		public ITerminalNode BREAK() { return GetToken(JiahuScriptParser.BREAK, 0); }
		public BreakContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_break; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBreak(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BreakContext @break() {
		BreakContext _localctx = new BreakContext(Context, State);
		EnterRule(_localctx, 12, RULE_break);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwitchStatContext : ParserRuleContext {
		public ITerminalNode SWITCH() { return GetToken(JiahuScriptParser.SWITCH, 0); }
		public ITerminalNode OPEN_PARENS() { return GetToken(JiahuScriptParser.OPEN_PARENS, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode CLOSE_PARENS() { return GetToken(JiahuScriptParser.CLOSE_PARENS, 0); }
		public ITerminalNode OPEN_BRACE() { return GetToken(JiahuScriptParser.OPEN_BRACE, 0); }
		public ITerminalNode CLOSE_BRACE() { return GetToken(JiahuScriptParser.CLOSE_BRACE, 0); }
		public CaseBlockContext[] caseBlock() {
			return GetRuleContexts<CaseBlockContext>();
		}
		public CaseBlockContext caseBlock(int i) {
			return GetRuleContext<CaseBlockContext>(i);
		}
		public DefaultBlockContext defaultBlock() {
			return GetRuleContext<DefaultBlockContext>(0);
		}
		public SwitchStatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switchStat; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwitchStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SwitchStatContext switchStat() {
		SwitchStatContext _localctx = new SwitchStatContext(Context, State);
		EnterRule(_localctx, 14, RULE_switchStat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(SWITCH);
			State = 114; Match(OPEN_PARENS);
			State = 115; expr(0);
			State = 116; Match(CLOSE_PARENS);
			State = 117; Match(OPEN_BRACE);
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 118; caseBlock();
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==CASE );
			State = 124;
			_la = TokenStream.La(1);
			if (_la==DEFAULT) {
				{
				State = 123; defaultBlock();
				}
			}

			State = 126; Match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CaseBlockContext : ParserRuleContext {
		public ITerminalNode CASE() { return GetToken(JiahuScriptParser.CASE, 0); }
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(JiahuScriptParser.COLON, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public CaseBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_caseBlock; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCaseBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CaseBlockContext caseBlock() {
		CaseBlockContext _localctx = new CaseBlockContext(Context, State);
		EnterRule(_localctx, 16, RULE_caseBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128; Match(CASE);
			State = 129; value();
			State = 130; Match(COLON);
			State = 131; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefaultBlockContext : ParserRuleContext {
		public ITerminalNode DEFAULT() { return GetToken(JiahuScriptParser.DEFAULT, 0); }
		public ITerminalNode COLON() { return GetToken(JiahuScriptParser.COLON, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public DefaultBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defaultBlock; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefaultBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefaultBlockContext defaultBlock() {
		DefaultBlockContext _localctx = new DefaultBlockContext(Context, State);
		EnterRule(_localctx, 18, RULE_defaultBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133; Match(DEFAULT);
			State = 134; Match(COLON);
			State = 135; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileStatContext : ParserRuleContext {
		public ITerminalNode WHILE() { return GetToken(JiahuScriptParser.WHILE, 0); }
		public ITerminalNode OPEN_PARENS() { return GetToken(JiahuScriptParser.OPEN_PARENS, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode CLOSE_PARENS() { return GetToken(JiahuScriptParser.CLOSE_PARENS, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public WhileStatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileStat; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJiahuScriptVisitor<TResult> typedVisitor = visitor as IJiahuScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStat(this);
			else return visitor.VisitChildren(this);
		}
	}
